# Neo

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  ProjectOverview.md  article.md  neo_brainstorming.json  token_usage.py
.claude/: settings.json
.claude/hooks/: neo-update.sh
src/: lib.rs  main.rs  types.rs
src/agent/: claude.rs
src/ai/: conventions.rs  mod.rs  summarizer.rs
src/cli/: init.rs  mod.rs  update.rs  validate.rs
src/core/: graph.rs  mod.rs  scanner.rs  writer.rs
src/parser/: detector.rs  mod.rs  python.rs  typescript.rs
